feat: add_text, add_textpath

--- a/README.qmd
+++ b/README.qmd
@@ -55,11 +55,9 @@ I'm planning to re-implement features like [React Native Skia](https://shopify.g
 - Images
   - [x] PNG
 - Text
-  - Paragraph
-  - Text
-  - Glyphs
-  - Text Path
-  - Text Blob
+  - [ ] Paragraph
+  - [x] Text Path
+  - [x] Text Blob
 - Painting Attributes ([Paint](https://rust-skia.github.io/doc/skia_safe/type.Paint.html))
   - [x] PathEffects
   - [ ] MaskFilter?? (blur)
