docs: update readme

--- a/README.qmd
+++ b/README.qmd
@@ -56,7 +56,7 @@ I'm planning to re-implement features like [React Native Skia](https://shopify.g
   - [x] Text Blob
 - Painting Attributes ([Paint](https://rust-skia.github.io/doc/skia_safe/type.Paint.html))
   - [x] Path Effects
-  - [ ] Mask Filter (blur)
+  - [x] Mask Filter (blur)
   - [ ] Color Filters
   - [x] Shaders
   - [ ] Image Filters / Runtime Shaders
