--- a/README.qmd
+++ b/README.qmd
@@ -57,11 +57,10 @@ I'm planning to re-implement features like [React Native Skia](https://shopify.g
 - Painting Attributes ([Paint](https://rust-skia.github.io/doc/skia_safe/type.Paint.html))
   - [x] Path Effects
   - [x] Mask Filter (blur)
-  - [ ] Color Filters
   - [x] Shaders
   - [ ] Image Filters / Runtime Shaders
-    - sksl support
-    - [uniforms](https://rust-skia.github.io/doc/skia_safe/runtime_effect/type.RuntimeShaderBuilder.html#method.set_uniform_int) support
+    - [x] SkSL and [uniforms](https://rust-skia.github.io/doc/skia_safe/runtime_effect/type.RuntimeShaderBuilder.html#method.set_uniform_int) support
+    - [ ] `*_lit_diffuse` and `*_lit_specular`
 
 ### Not planned
 
@@ -71,6 +70,7 @@ I'm planning to re-implement features like [React Native Skia](https://shopify.g
   - Paragraph
   - Text Path
 - Fitting Images (needs to re-implement [this](https://github.com/Shopify/react-native-skia/blob/4192f839d7ffc5cb0aba91c0f0f97e595d5c8409/packages/skia/cpp/api/recorder/ImageFit.h))
+- [Color Filters](https://shopify.github.io/react-native-skia/docs/color-filters) (only `skia_safe::image_filters::color_filter` is available)
 - [Group](https://shopify.github.io/react-native-skia/docs/group/) / [Backdrop Filters](https://shopify.github.io/react-native-skia/docs/backdrops-filters)
 - [Mask](https://shopify.github.io/react-native-skia/docs/mask/)
 
